aiml/cluster-namespace-redhat-ods-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
  labels:
    openshift.io/cluster-monitoring: "true"
  name: redhat-ods-operator
